<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Astarku</string>

    <!-- messagemessage -->
    <string name="astarku__userlocation_disable">User location currently disable !</string>

    <!-- service -->
    <string name="astarku__graphservice_started">GraphService start build graph</string>
    <string name="astarku__graphservice_finish">Graph finish builded</string>
    <string name="astarku__graphservice_running">GraphService running</string>

    <!-- shortestpath -->
    <string name="astarku__shortestPathRunning">Calculation still in progress...</string>
    <string name="astarku__graph_isnull">Graph not yet ready...</string>
	<string name="astarku__path_isnull">Shortestpath Not found!</string>
	
    <!-- activity -->
    <string name="title_activity_main">Home</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- actionaction -->
    <string name="action_preferences">Preferences</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_mylocation">Location</string>
    <string name="action_option">Option</string>
    <string name="action_reroute">Reroute</string>
    <string name="action_routing">Routing</string>
    <string name="action_routing_details">Routing Details</string>
    <string name="action_routing_algoritma">Algoritma Execution Info</string>
    <string name="action_routing_clearOverlay">Clear Marker</string>
    <string name="action_panic">PANIC!</string>

    <!-- contextcontext -->
    <string name="astarku__context_setasstart">Set as Start</string>
    <string name="astarku__context_setasend">Set as End</string>
    <string name="astarku__context_setasobstacle">Set as Obstacle</string>

    <!-- listnavigation item -->
    <string name="list_navigation_home">Home</string>
    <string name="list_navigation_search">Search</string>
    <string name="list_navigation_history">History</string>

    <!-- preferences -->
    <string name="preferences_locationupdate">Update Location</string>
    <string name="key_preferences_locationupdate">key_preferences_locationupdate</string>
    <string name="title_preferences_locationupdate">Enable Update Location</string>
    <string name="summary_preferences_locationupdate">If enable, astarku always track your location</string>
    <string name="key_preferences_locationsnap">key_preferences_locationsnap</string>
    <string name="title_preferences_locationsnap">Enable Snap to Location</string>
    <string name="summary_preferences_locationsnap">If enable, astarku always snap location on mapview</string>
    <string name="search">Search Place</string>
    <string name="search_hint">Search Place</string>
    <string name="search_settings">Search Place Names</string>
    <string name="title_activity_route_details">Route Details</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="turn_left">Turn Left</string>
    <string name="label_total">TOTAL :</string>
    
    <string name="preferences_demo">Application Demo</string>
    <string name="key_preferences_demo">key_preferences_demo</string>
    <string name="summary_preferences_demo">Enable or Disable demo</string>
    

</resources>