<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_routing"
        android:icon="@drawable/ic_action_routing"
        android:showAsAction="always"
        android:title="@string/action_routing">
        
        <menu >
            <item android:id="@+id/action_routing_details"
                android:showAsAction="always"
                android:title="@string/action_routing_details"/>
            <item android:id="@+id/action_routing_algorithm"
                android:showAsAction="always"
                android:title="@string/action_routing_algoritma"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_reroute"
        android:icon="@drawable/ic_action_reroute"
        android:showAsAction="always"
        android:title="@string/action_reroute"/>
    <item
        android:id="@+id/action_panic"
        android:showAsAction="always"
        android:title="@string/action_panic"/>
    <item
        android:id="@+id/action_mylocation"
        android:icon="@drawable/ic_menu_myplaces"
        android:showAsAction="always"
        android:title="@string/action_mylocation"/>
    <item
        android:id="@+id/action_preferences"
        android:showAsAction="never"
        android:title="@string/action_preferences"/>
    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>