<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_option"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark"
        android:showAsAction="always"
        android:title="@string/action_option">
        <menu>
            <item
                android:id="@+id/action_preferences"
                android:menuCategory="@id/action_option"
                android:orderInCategory="1"
                android:showAsAction="never"
                android:title="@string/action_preferences"/>
            <item
                android:id="@+id/action_help"
                android:menuCategory="@id/action_option"
                android:orderInCategory="2"
                android:showAsAction="never"
                android:title="@string/action_help"/>
            <item
                android:id="@+id/action_about"
                android:menuCategory="@id/action_option"
                android:orderInCategory="3"
                android:showAsAction="never"
                android:title="@string/action_about"/>
        </menu>
    </item>

</menu>