<?xml version="1.0" encoding="utf-8"?>
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/app_name"
    android:hint="@string/search_hint"
    android:searchSettingsDescription="@string/search_settings"
    
    
    android:searchSuggestAuthority="id.ac.itats.skripsi.databuilder.PlaceContentProvider"
    android:searchSuggestIntentAction="android.intent.action.VIEW"
    android:searchSuggestIntentData="content://id.ac.itats.skripsi.databuilder.PlaceContentProvider/places"
    android:searchSuggestSelection=" ?"
    android:searchSuggestThreshold="1" 
    android:voiceLanguage="id"
    android:voiceLanguageModel="web_search|free_form"
    android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"    
       
    android:includeInGlobalSearch="true" >
</searchable>
